Kubernetes/Proof-of-Concept/minikube/minikube/K8s/kubectl copy/cluster-ip-default-service-external-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-default-service-external-ip
spec:
  selector:
    app.kubernetes.io/name: cluster-ip-default-service-external-ip-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 49152
  externalIPs:
    - 198.51.100.32
