Kubernetes/Proof-of-Concept/minikube/minikube/K8s/kubectl copy/cluster-ip-default-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-default-service
  labels:
    app: cluster-ip-default-service-app
spec:
  ports:
  - port: 8080
    targetPort: http-server
