Kubernetes/Proof-of-Concept/minikube/minikube/K8s/kubectl copy/cluster-ip-headless-service-with-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-headless-service-with-selector
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: cluster-ip-headless-service-with-selector-app
  ports:
    - protocol: TCP
      port: 38128
      targetPort: 38128
