Kubernetes/Proof-of-Concept/minikube/minikube/K8s/kubectl copy/cluster-ip-headless-service-without-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-headless-service-without-selector
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      # When you define a headless Service without a selector, the port must match the targetPort.
      port: 16906
      targetPort: 16906
