Kubernetes/Proof-of-Concept/minikube/minikube/K8s/kubectl copy/cluster-ip-multi-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kube-dns
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: CoreDNS
  name: cluster-ip-multi-port-service
  namespace: default
spec:
  clusterIP: 10.96.0.5
  ports:
  - name: dns
    port: 53
    protocol: UDP
    targetPort: 53
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: 53
  selector:
    k8s-app: kube-dns
  type: ClusterIP
