Kubernetes/Proof-of-Concept/minikube/minikube/K8s/kubectl copy/external-name-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-name-service
  namespace: production
spec:
  type: ExternalName
  externalName: external.name.service.com
