Kubernetes/Proof-of-Concept/minikube/minikube/K8s/kubectl copy/ingress-to-cluster-ip-service-and-node-port-service.yaml
kind: Pod
apiVersion: v1
metadata:
  name: x-pod
  labels:
    app: x-app
spec:
  containers:
    - name: x-app-container
      image: 'kicbase/echo-server:1.0'
---
kind: Service
apiVersion: v1
metadata:
  name: cluster-ip-service-from-ingress
spec:
  type: ClusterIP
  selector:
    app: x-app
  ports:
    - port: 8080
---
kind: Pod
apiVersion: v1
metadata:
  name: y-pod
  labels:
    app: y-app
spec:
  containers:
    - name: y-pod-container
      image: 'kicbase/echo-server:1.0'
---
kind: Service
apiVersion: v1
metadata:
  name: node-port-service-from-ingress
spec:
  type: NodePort
  selector:
    app: y-app
  ports:
    - port: 8080
      nodePort: 30008
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-to-cluster-ip-service-and-node-port-service
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /x
            backend:
              service:
                name: cluster-ip-service-from-ingress
                port:
                  number: 8080
          - pathType: Prefix
            path: /y
            backend:
              service:
                name: node-port-service-from-ingress
                port:
                  number: 8080
---
